apps/paperless/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: server
  labels:
    app.kubernetes.io/name: paperless-tika
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-tika
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-tika
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: server
    spec:
      containers:
        - name: tika
          image: docker.io/apache/tika:3.3.1.0
          ports:
            - containerPort: 9998
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: server
  labels:
    app.kubernetes.io/name: paperless-tika
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
