apps/paperless/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: server
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`paperless.d-f.dev`)"
      kind: Rule
      services:
        - name: paperless
          port: 8000
      middlewares:
        - name: crowdsec
          namespace: server
  tls:
    certResolver: letsencrypt
